Inserindo imagem ilustrativa no main e cabeçalho e corpo na tag aside do CSS GRIG

--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div class="container">
     <header class="cabecalho">
-      <img src="images/logo.svg" id="imagemTeste">
+      <img src="images/logo.svg" id="imagemHeader">
     </header>
-    <main></main>
-    <aside></aside>
+    <main class="main">
+      <img src="images/illustration-mockups.svg" id="imagemMain">
+    </main>
+    <aside>
+      <div class="aside">
+        <p id="titulo">Build The Community <br>
+          Your Fans Will Love
+        </p>
+        <p id="corpo">Hunddle re-imagines the way buil communities. You have <br>
+          a voice, but so does your audience. Create connections with <br>
+          your users as you engage in genuine discussion.
+        </p>
+        <input type="button" value="Register" id="botao">
+      </div>
+    </aside>
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
