--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <title>Building Dreams</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -26,19 +26,26 @@
         <p id="titulo">Build The Community <br>
           Your Fans Will Love
         </p>
-        <p id="corpo">Hunddle re-imagines the way buil communities. You have <br>
+        <p id="corpo">Hunddle re-imagines the way build communities. You have <br>
           a voice, but so does your audience. Create connections with <br>
           your users as you engage in genuine discussion.
         </p>
-        <input type="button" value="Register" id="botao">
+        <button class="botao">Register</button>
       </div>
     </aside>
-    <footer>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Edir Lucas Icety</a>.
-      </p>
+    <footer class="footer">
+        <p class="built">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="https://github.com/edirlucasi7" target="_blank">Edir Lucas Icety</a>.
+        </p>
+        <div class="icone">
+          <div class="icones"><ion-icon name="logo-facebook"></ion-icon></div>
+          <div class="icones"><ion-icon name="logo-twitter"></ion-icon></div>
+          <div class="icones"><ion-icon name="logo-instagram"></ion-icon></div>
+        </div>
     </footer>
   </div>
+
+  <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
 </html>
